@@ -1,6 +1,7 @@
 2008-09-24  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: Using list query with SQL LIKE wildcards does not work
+	* Fixed bug #9408: Selecting by tag using wildcards does not work with database disposal of t3lib_cache
 
 2008-09-24  Dmitry Dulepov  <dmitry@typo3.org>
 
